--- a/project.ini
+++ b/project.ini
@@ -1,6 +1,6 @@
 [project]
-name = htcondor
-label = HTCondor
+name = htcondor-Flocking
+label = HTCondor Flocking
 type = scheduler
 version = 1.0.1
 autoupgrade = true
