Added the full file names

--- a/project.ini
+++ b/project.ini
@@ -6,7 +6,7 @@ version = 1.0.1
 autoupgrade = true
 
 [blobs]
-Files=condor-agent-1.27.zip,condor-agent-1.27.tgz,condor-8.6.13-x86_64_*-stripped.tar.gz,condor-8.6.13-Windows-x64.msi
+Files=condor-agent-1.27.zip,condor-agent-1.27.tgz,condor-8.6.13-x86_64_RedHat6-stripped.tar.gz,condor-8.6.13-x86_64_RedHat7-stripped.tar.gz,condor-8.6.13-x86_64_Ubuntu14-stripped.tar.gz,condor-8.6.13-x86_64_Ubuntu16-stripped.tar.gz,condor-8.6.13-x86_64_Ubuntu18-stripped.tar.gz,condor-8.6.13-Windows-x64.msi
 
 [spec master]
 run_list = role[condor_unified_manager]
